--- a/index.html
+++ b/index.html
@@ -16,16 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Thebargain</h1>
-        <p>Webpage-based micro roleplaying game about making deals with the devil.</p>
-
-        <p class="view"><a href="https://github.com/BluShine/TheBargain">View the Project on GitHub <small>BluShine/TheBargain</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/BluShine/TheBargain/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/BluShine/TheBargain/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/BluShine/TheBargain">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <p>A webpage-based micro roleplaying game about making deals with the devil.</p>
       </header>
       <section>
         <h1>
@@ -43,10 +34,6 @@
 <h1>
 <a id="devil" class="anchor" href="#devil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Devil</h1>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/BluShine">BluShine</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
