--- a/index.html
+++ b/index.html
@@ -24,12 +24,22 @@
 
 <p>You will need 3+ people and some kind of timer. </p>
 
-<p>Choose one person to play the Devil. All the other players are Summoners. The Summoners are summoning the Devil to make a bargain. They have 7 minutes together to make all of their deals. </p>
+<p>Choose one person to play the Devil. All the other players are Summoners. The Summoners are summoning the Devil to make a bargain. They have 7 minutes together to make all of their deals. The Devil also controls the negotiations: they may point to a Summoner, and the others must fall silent. </p>
+
+<p>You will have exactly 7 minutes to negotiate. When the time is up, read the epilogue section at the bottom. </p>
 
 <p>Summoners, read the section below. Devil, skip to the Devil heading. </p>
 
 <h1>
 <a id="summoners" class="anchor" href="#summoners" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summoners</h1>
+
+<p>As a summoner, you are here to make a deal with the Devil. Of course, the Devil will need something in return. Your soul, your firstborn, eternal servitude, that sort of thing. </p>
+<p>When everyone is ready to begin, click your link below, and start the timer.</p>
+<p>A Summoner's Desires</p>
+
+<h1>
+<a id="epilogue" class="anchor" href="#epilogue" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Epilogue</h1>
+<p>After 7 minutes, the deals are sealed. Both parties reveal their points. <br>If the Devil got more points out of the deal, the Devil describes the "fine print" of the deal, and the unexpected. <br>If the summoner got more points, the summoner has tricked the. <br>If the points are equal, it is a fair deal. <br>If one of the summoners failed to make a deal, the Devil dispatches a demon to kill the summoner. Of course, this is quite annoying for all sides. </p>
 
 <h1>
 <a id="devil" class="anchor" href="#devil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Devil</h1>
