--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 <p>A Summoner's Desires</p>
 
 <h1>
+<a id="devil" class="anchor" href="#devil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Devil</h1>
+<p>As the Devil, you are here to strike a bargain with the summoners. As the Devil, you can grant the summoners nearly anything that they wish for. But you don't work for free. You want souls, lives, firstborn children, etc. </p>
+
+<h1>
 <a id="epilogue" class="anchor" href="#epilogue" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Epilogue</h1>
 <p>After 7 minutes, the deals are sealed. Both parties reveal their points. <br>If the Devil got more points out of the deal, the Devil describes the "fine print" of the deal, and the unexpected. <br>If the summoner got more points, the summoner has tricked the. <br>If the points are equal, it is a fair deal. <br>If one of the summoners failed to make a deal, the Devil dispatches a demon to kill the summoner. Of course, this is quite annoying for all sides. </p>
 
-<h1>
-<a id="devil" class="anchor" href="#devil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Devil</h1>
-      </section>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
