Fixed the stuff I just broke.
Put back some text that got removed.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <h1>
 <a id="devil" class="anchor" href="#devil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Devil</h1>
 <p>As the Devil, you are here to strike a bargain with the summoners. As the Devil, you can grant the summoners nearly anything that they wish for. But you don't work for free. You want souls, lives, firstborn children, etc. </p>
+<p>As the Devil, you also control the negotiations. You can point at a Summoner, and the others must stop talking.</p>
+<p>When everyone is ready to begin, click your link below, and start the timer.</p>
+<p>The Devil's Agenda</p>
 
 <h1>
 <a id="epilogue" class="anchor" href="#epilogue" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Epilogue</h1>
