Added devil and summoner pages.
Added pages for the devil and the summoner.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Thebargain by BluShine</title>
+    <title>The Bargain by BluShine</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Thebargain</h1>
+        <h1>The Bargain</h1>
         <p>A webpage-based micro roleplaying game about making deals with the devil.</p>
       </header>
       <section>
@@ -35,20 +35,18 @@
 
 <p>As a summoner, you are here to make a deal with the Devil. Of course, the Devil will need something in return. Your soul, your firstborn, eternal servitude, that sort of thing. </p>
 <p>When everyone is ready to begin, click your link below, and start the timer.</p>
-<p>A Summoner's Desires</p>
+<p><a href="summoner.html">A Summoner's Desires</a></p>
 
 <h1>
 <a id="devil" class="anchor" href="#devil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Devil</h1>
 <p>As the Devil, you are here to strike a bargain with the summoners. As the Devil, you can grant the summoners nearly anything that they wish for. But you don't work for free. You want souls, lives, firstborn children, etc. </p>
 <p>As the Devil, you also control the negotiations. You can point at a Summoner, and the others must stop talking.</p>
 <p>When everyone is ready to begin, click your link below, and start the timer.</p>
-<p>The Devil's Agenda</p>
+<p><a href="devil.html">The Devil's Agenda</a></p>
 
 <h1>
 <a id="epilogue" class="anchor" href="#epilogue" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Epilogue</h1>
 <p>After 7 minutes, the deals are sealed. Both parties reveal their points. <br>If the Devil got more points out of the deal, the Devil describes the "fine print" of the deal, and the unexpected. <br>If the summoner got more points, the summoner has tricked the. <br>If the points are equal, it is a fair deal. <br>If one of the summoners failed to make a deal, the Devil dispatches a demon to kill the summoner. Of course, this is quite annoying for all sides. </p>
-
-
-    
+    </section>
   </body>
 </html>
