Made summoner offers a list
Made the summoner's things into an html list.

--- a/summoner.html
+++ b/summoner.html
@@ -19,7 +19,7 @@
       </header>
       <section>
 <p>These are the things that you want as a Summoner. You don't need to get all of them, but you should try to get a good deal. Even if you can get everything, if the Devil is ripping you off, it won't end well for you.</p>
-<p>Of course, the Devil won't give you what you want out of the kindness of his heart. You have to give them something in return. Here's what you can offer:<br>Your soul<br>Your life<br>Your eternal servitude<br>Your firstborn child</p>
+<p>Of course, the Devil won't give you what you want out of the kindness of his heart. You have to give them something in return. Here's what you can offer:<br><ol><li>Your soul<li>Your life<li>Your eternal servitude<li>Your firstborn child</ol></p>
 	  </section>
   </body>
 </html>
