--- a/summoner.html
+++ b/summoner.html
@@ -18,7 +18,8 @@
         <h1>The Summoner's Desires</h1>
       </header>
       <section>
-<p>These are the things that you want as a Summoner. You don't need to get all of them, but you should try to get a good deal. Even if you can get everything, if the Devil is ripping you off, it won't end well for you.</p>
+<p>These are the things that you want as a Summoner. Each also has a point value: the more points, the better. You don't need to get all of them, but you should try to get a good deal. Even if you can get everything, if the Devil is ripping you off, it won't end well for you.</p>
+<ul id="desires"></ul>
 <p>Of course, the Devil won't give you what you want out of the kindness of his heart. You have to give them something in return. Here's what you can offer:<br><ul><li>Your soul<li>Your life<li>Your eternal servitude<li>Your firstborn child</ul></p>
 	  </section>
   </body>
