Devil score randomization fully works now.
Values are generated randomly without repetition.

--- a/devil.html
+++ b/devil.html
@@ -8,14 +8,6 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
-	<script>
-	var list = document.getElementById("wants");
-	var items = list.getElementsByTagName("li");
-	for (var i = 0; i < items.length; i++) {
-		items[i].style.backgroundColor = "red";
-		items[i].value += ": " + Math.floor((Math.random() * 3) + 1) + " points";
-	}
-	</script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -28,6 +20,20 @@
       <section>
 <p>These are the things that you want as the Devil. Each has a point value. The more points, the better. You can even ask for multiples. Of course, you're the Devil, so feel free to embelish your deals with extra details. </p>
 <ul id="wants"><li>Souls<li>Lives<li>Firstborn children<li>Eternal servitude</ul>
+
+<script>
+	var list = document.getElementById("wants");
+	var items = list.getElementsByTagName("li");
+	var prevValue = 0;
+	for (var i = 0; i < items.length; i++) {
+		var nValue = Math.floor((Math.random() * 3) + 1);
+		while(nValue == prevValue) {
+			var nValue = Math.floor((Math.random() * 3) + 1);
+		}
+		items[i].innerHTML += ":     " + nValue + " points";
+		prevValue = nValue;
+	}
+</script>
 	  </section>
   </body>
 </html>
