Bigger, clearer headings.
Added big ol' headings to the summoner and devil pages.

--- a/devil.html
+++ b/devil.html
@@ -19,6 +19,7 @@
       </header>
       <section>
 <p>These are the things that you want as the Devil. Each has a point value. The more points, the better. You can even ask for multiples. Of course, you're the Devil, so feel free to embelish your deals with extra details. </p>
+<h1>You want</h1>
 <ul id="wants"><li>Souls<li>Lives<li>Firstborn children<li>Eternal servitude</ul>
 
 <script>
