--- a/summoner.html
+++ b/summoner.html
@@ -19,6 +19,7 @@
       </header>
       <section>
 <p>These are the things that you want as a Summoner. Each also has a point value: the more points, the better. You don't need to get all of them, but you should try to get a good deal. Even if you can get everything, if the Devil is ripping you off, it won't end well for you.</p>
+<h1>You want:</h1>
 <ul id="desires"><li><li><li><li></ul>
 <script>
 	var thingsYaWant = ["A million dollars", "A wallet that never empties", "A billion dollars", "Be the richest person in the world", "Rule the world", "Rule a country", "An army", "Magical powers", "A super power", "A demon servant", "A magical talking animal", "A cool sidekick", "A true friend", "Make the Devil your best friend", "Marry the Devil", "True love", "Find your soulmate"];
@@ -61,7 +62,8 @@
 		return arr[Math.floor(Math.random() * arr.length)];
 	}
 </script>
-<p>Of course, the Devil won't give you what you want out of the kindness of his heart. You have to give them something in return. Here's what you can offer:<br><ul><li>Your soul<li>Your life<li>Your eternal servitude<li>Your firstborn child</ul></p>
+<p>Of course, the Devil won't give you what you want out of the kindness of his heart. You have to give them something in return. Here's what you can offer:</p>
+<h1>You can offer:</h1><ul><li>Your soul<li>Your life<li>Your eternal servitude<li>Your firstborn child</ul></p>
 	  </section>
   </body>
 </html>
