--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <h1>
 <a id="epilogue" class="anchor" href="#epilogue" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Epilogue</h1>
-<p>After 7 minutes, the deals are sealed. Both parties reveal their points. <br>If the Devil got more points out of the deal, the Devil describes the "fine print" of the deal, and the unexpected. <br>If the summoner got more points, the summoner has tricked the. <br>If the points are equal, it is a fair deal. <br>If one of the summoners failed to make a deal, the Devil dispatches a demon to kill the summoner. Of course, this is quite annoying for all sides. </p>
+<p>After 7 minutes, the deals are sealed. Both parties reveal their points. <br><br>If the Devil got more points out of the deal, the Devil describes the "fine print" of the deal, and how the summoner was tricked and didn't exactly get what they wanted. <br><br>If the summoner got more points, the summoner describes how they trick the devil and manage to get back what they promised. <br><br>If the points are equal, it is a fair deal. <br><br>If one of the summoners failed to make a deal, the Devil dispatches a demon to kill that summoner. Of course, this is quite inconvenient for both parties. </p>
     </section>
   </body>
 </html>
