--- a/summoner.html
+++ b/summoner.html
@@ -22,7 +22,7 @@
 <h1>You want:</h1>
 <ul id="desires"><li><li><li><li></ul>
 <script>
-	var thingsYaWant = ["A million dollars", "A wallet that never empties", "A billion dollars", "Be the richest person in the world", "Rule the world", "Rule a country", "An army", "Magical powers", "A super power", "A demon servant", "A magical talking animal", "A cool sidekick", "A true friend", "Make the Devil your best friend", "Marry the Devil", "True love", "Find your soulmate"];
+	var thingsYaWant = ["A million dollars", "A wallet that never empties", "A billion dollars", "Be the richest person in the world", "Rule the world", "Rule a country", "An army", "Magical powers", "A super power", "A demon servant", "A magical talking animal", "A cool sidekick", "A true friend", "Make the Devil your best friend", "Marry the Devil", "True love", "Find your soulmate", "Invincibility", "Immortality"];
 	var stuffs = ["fiddle", "guitar", "piano", "flute", "saxophone", "tuba", "sitar", "pair of underpants", "body", "face", "family", "friend", "dog", "cat", "job", "voice", "girlfriend", "boyfriend", "hat", "weapon"];
 	var roles = ["pop star", "king", "queen", "rock star", "president", "wizard", "magician", "assasin", "prime minister", "mime", "musician", "actor", "painter", "sculptor", "leader", "dancer", "warrior", "hero", "writer", "athlete"];
 	var adjectivests = ["greatest", "greatest", "greatest", "greatest", "strongest", "most famous", "coolest", "most beautiful", "fastest", "most powerful", "most interesting", "most valuable", "loveliest", "most dangerous", "most amazing", "nicest", "best", "most adorable"];
