--- a/devil.html
+++ b/devil.html
@@ -21,6 +21,9 @@
 <p>These are the things that you want as the Devil. Each has a point value. The more points, the better. You can even ask for multiples. Of course, you're the Devil, so feel free to embelish your deals with extra details. </p>
 <h1>You want</h1>
 <ul id="wants"><li>Souls<li>Lives<li>Firstborn children<li>Eternal servitude</ul>
+<h1>You secret goal is</h1>
+<h2 id="secret"></h2>
+<p>If you accomplish your goal, you get 2 extra points in each deal, and describe how your terrible plot wreaks havok on the mortal realm.</p>
 
 <script>
 	var list = document.getElementById("wants");
@@ -34,6 +37,10 @@
 		items[i].innerHTML += ":     " + nValue + " points";
 		prevValue = nValue;
 	}
+
+        var goals = {"give 3 cursed gold items", "give 3 destructive powers", "unleash 3 beasts upon the world", "cause 3 deaths", "seed moral decay in 3 ways", "corrupt 3 children", "obtain 3 earthly servants of evil", "arrange 3 unholy loves"}
+        var secret = document.getElementById("secret");
+        
 </script>
 	  </section>
   </body>
