Fixed secret I think.

--- a/devil.html
+++ b/devil.html
@@ -22,7 +22,7 @@
 <h1>You want</h1>
 <ul id="wants"><li>Souls<li>Lives<li>Firstborn children<li>Eternal servitude</ul>
 <h1>You secret goal is</h1>
-<h2 id="secret"></h2>
+<p id="secret"></p>
 <p>If you accomplish your goal, you get 2 extra points in each deal, and describe how your terrible plot wreaks havok on the mortal realm.</p>
 
 <script>
