--- a/devil.html
+++ b/devil.html
@@ -22,7 +22,7 @@
 <h1>You want</h1>
 <ul id="wants"><li>Souls<li>Lives<li>Firstborn children<li>Eternal servitude</ul>
 <h1>You secret goal is</h1>
-<p id="secret"></p>
+<h2 id="secret">: </h2>
 <p>If you accomplish your goal, you get 2 extra points in each deal, and describe how your terrible plot wreaks havok on the mortal realm.</p>
 
 <script>
@@ -40,7 +40,7 @@
 
         var goals = ["give 3 cursed gold items", "give 3 destructive powers", "unleash 3 beasts upon the world", "cause 3 deaths", "seed moral decay in 3 ways", "corrupt 3 children", "obtain 3 earthly servants of evil", "arrange 3 unholy loves"];
         var secret = document.getElementById("secret");
-        secret.innerHTML += goals[Math.floor(Math.random() * arr.length)];
+        secret.innerHTML += goals[Math.floor(Math.random() * arr.length)] + ".";
 	
         
 </script>
