--- a/devil.html
+++ b/devil.html
@@ -38,7 +38,7 @@
 		prevValue = nValue;
 	}
 
-        var goals = ["give 3 cursed gold items", "give 3 destructive powers", "unleash 3 beasts upon the world", "cause 3 deaths", "seed moral decay in 3 ways", "corrupt 3 children", "obtain 3 earthly servants of evil", "arrange 3 unholy loves"];
+        var goals = ["give 3 cursed gold items", "give 3 destructive powers", "unleash 3 beasts upon the world", "cause 3 deaths", "seed moral decay in 3 ways", "corrupt 3 children", "obtain 3 earthly servants of evil", "arrange 3 unholy loves", "give 3 people the means to better the world", "get 3 personal compliments", "create 3 earthly representations of your power", "cause 3 awkward situations", "get 3 people addicted to your products", "destroy 3 beautiful things in the world", "start 3 evil cults"];
         var secret = document.getElementById("secret");
         secret.innerHTML += goals[Math.floor(Math.random() * goals.length)] + ".";
 	
